--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,318 @@
-.logo img {
-  width: 50px;
-  height: 50px;
+/* #region RESET */
+
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/*#endregion */
+
+body {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+}
+
+#root {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .dark {
   color: white;
   background-color: black;
 }
+
+/* #region SWITCH */
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 85px;
+  height: 30px;
+  background-color: rgb(217, 213, 221);
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.switch::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border-radius: 25px;
+  background-color: rgb(117, 150, 179);
+  left: 2.5px;
+  top: 2.5px;
+  transition: all 0.4s;
+}
+
+input[type="checkbox"]:checked + .switch::after {
+  transform: translateX(54px);
+}
+
+input[type="checkbox"]:checked + .switch {
+  background-color: rgb(46, 47, 47);
+}
+
+.offscreen {
+  position: absolute;
+  left: -999999px;
+}
+
+/* #endregion */
+
+/* #region NAV BAR */
+
+nav {
+  display: flex;
+  padding: 0.5rem 10rem;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(215, 215, 216);
+}
+
+nav.darkmode {
+  border-bottom: 1px solid rgb(43, 43, 43);
+}
+
+nav div,
+ul {
+  display: flex;
+  align-items: center;
+}
+
+nav div:first-of-type {
+  gap: 0.5rem;
+}
+
+nav div:last-of-type {
+  gap: 2.5rem;
+}
+
+nav p {
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: 0.5rem;
+}
+
+.logo img {
+  width: 40px;
+  height: 40px;
+}
+
+ul {
+  list-style-type: none;
+  gap: 2rem;
+}
+
+nav a {
+  font-size: 0.7rem;
+  font-weight: 700;
+  text-decoration: none;
+  color: black;
+}
+
+nav.darkmode a {
+  color: white;
+}
+
+nav a:hover {
+  text-decoration: underline;
+  text-underline-offset: 0.5rem;
+}
+
+/* #endregion */
+
+/* #region FOOTER */
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 10rem;
+  gap: 0.5rem;
+  font-size: 0.8rem;
+  padding-top: 4rem;
+}
+
+footer.darkmode img {
+  filter: invert(1);
+}
+
+/* #endregion */
+
+/* #region HOME */
+
+.home {
+  display: flex;
+  justify-content: center;
+  margin-bottom: auto;
+  margin-top: 5vh;
+}
+
+/* #endregion */
+
+/* #region CITY */
+
+.city {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: auto;
+  margin-top: 5vh;
+  gap: 15vh;
+}
+
+.city-container {
+  display: flex;
+  align-items: center;
+}
+
+.city-container > div:first-of-type {
+  width: 230px;
+  height: 240px;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.2rem;
+  border: 1px solid rgb(215, 215, 216);
+}
+
+.city-container > div:first-of-type h2,
+.city-container > div:first-of-type p {
+  text-align: center;
+  font-weight: 700;
+}
+
+.city-container > div:last-of-type {
+  width: 150px;
+  height: 240px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 0.3rem;
+}
+
+.city-container > div:last-of-type div {
+  font-size: 0.8rem;
+  font-weight: 700;
+  padding: 1.2rem;
+  border: 1px solid rgb(215, 215, 216);
+  border-left: none;
+}
+
+/* #endregion */
+
+/* #region SETTINGS */
+
+.settings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
+}
+
+.settings form:first-of-type {
+  font-size: 1.2rem;
+}
+
+.settings form:first-of-type label {
+  margin-right: 2rem;
+}
+
+.settings form:first-of-type input {
+  accent-color: rgb(117, 150, 179);
+  transform: scale(1.8);
+  margin-right: 0.5rem;
+}
+
+.settings form:last-of-type {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.settings form:last-of-type div {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.settings .switch {
+  transform: scale(0.8);
+  background-color: rgb(217, 213, 221);
+}
+
+.settings input:checked + .switch {
+  background-color: rgb(217, 213, 221);
+}
+
+/* #endregion */
+
+/* #region 404 */
+
+.ooops {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+}
+
+.ooops img {
+  width: 40vw;
+  margin-top: 4rem;
+}
+
+/* #endregion */
+
+/* #region SEARCH BAR */
+
+.search input[type="text"] {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 0.2rem;
+  width: 250px;
+  margin-right: 10px;
+}
+
+.search button[type="submit"] {
+  padding: 10px;
+  font-size: 16px;
+  background-color: rgb(81, 111, 137);
+  color: white;
+  border: none;
+  border-radius: 0.2rem;
+  cursor: pointer;
+}
+
+/* #endregion */
